reinstate state when cacnelling an update

--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -13,8 +13,7 @@
             'headings': [
                 { name: 'checkbox', label: 'checkbox' },
                 { name: 'text', label: 'text' },
-                { name: 'radio', label: 'radio' },
-                { name: 'radio2', label: 'radio2' }
+                { name: 'radio', label: 'radio' }
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
@@ -63,30 +62,6 @@
                             'value': 'baz',
                             'name': 'radio'
                         }
-                    ]
-                })
-            }}
-
-            {{
-                form.choice({
-                    'label': 'radio2',
-                    'id': 'radio2',
-                    'options': [
-                    {
-                        'label': 'mike',
-                        'value': 'mike',
-                        'name': 'radio2'
-                    },
-                    {
-                        'label': 'dan',
-                        'value': 'dan',
-                        'name': 'radio2'
-                    },
-                    {
-                        'label': 'robin',
-                        'value': 'robin',
-                        'name': 'radio2'
-                    }
                     ]
                 })
             }}
