--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -13,7 +13,11 @@
             'headings': [
                 { name: 'checkbox', label: 'checkbox' },
                 { name: 'text', label: 'text' },
-                { name: 'radio', label: 'radio' }
+                { name: 'radio', label: 'radio' },
+                { name: 'colour', label: 'colour' },
+                { name: 'date', label: 'date' },
+                { name: 'file', label: 'file' },
+                { name: 'password', label: 'password' }
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
@@ -63,6 +67,39 @@
                             'name': 'radio'
                         }
                     ]
+                })
+            }}
+
+            {{
+                form.color({
+                    'label': 'colour',
+                    'id': 'colour',
+                    'value': '123456',
+                    'name': 'colour'
+                })
+            }}
+
+            {{
+                form.date({
+                    'label': 'date',
+                    'id': 'date',
+                    'name': 'date'
+                })
+            }}
+
+            {{
+                form.file({
+                    'label': 'file',
+                    'id': 'file',
+                    'name': 'file'
+                })
+            }}
+
+            {{
+                form.password({
+                    'label': 'password',
+                    'id': 'password',
+                    'name': 'password'
                 })
             }}
         {{ form.repeatable_end() }}
