--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -11,95 +11,35 @@
             'label': 'The Pulsar team',
             'empty': 'You have not added any team members',
             'headings': [
-                { name: 'checkbox', label: 'checkbox' },
-                { name: 'text', label: 'text' },
-                { name: 'radio', label: 'radio' },
-                { name: 'colour', label: 'colour' },
-                { name: 'date', label: 'date' },
-                { name: 'file', label: 'file' },
-                { name: 'password', label: 'password' }
+
+                { name: 'select', label: 'select' }
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
             'add-another-group-text': 'Add another'
         }) }}
 
-            {{
-                form.fieldset_start({
-                    'legend': 'Team Member'
-                })
-            }}
+
 
             {{
-                form.text({
-                    'label': 'text',
-                    'id': 'text',
-                    'name': 'text'
-                })
-            }}
-
-            {{
-                form.checkbox({
-                    'label': 'checkbox',
-                    'id': 'checkbox',
-                    'name': 'checkbox'
-                })
-            }}
-
-            {{
-                form.choice({
-                    'label': 'radio',
-                    'id': 'radio',
+                form.select({
+                    'label': 'select',
+                    'id': 'select',
+                    'name': 'select',
                     'options': [
-                        {
-                            'label': 'foo',
-                            'value': 'foo',
-                            'name': 'radio'
-                        },
-                        {
-                            'label': 'bar',
-                            'value': 'bar',
-                            'name': 'radio'
-                        },
-                        {
-                            'label': 'baz',
-                            'value': 'baz',
-                            'name': 'radio'
-                        }
+                    {
+                        'label': 'Choose',
+                        'value': ''
+                    },
+                    {
+                        'label': 'Red',
+                        'value': 'colour_red'
+                    },
+                    {
+                        'label': 'Blue',
+                        'value': 'colour_blue'
+                    }
                     ]
-                })
-            }}
-
-            {{
-                form.color({
-                    'label': 'colour',
-                    'id': 'colour',
-                    'value': '123456',
-                    'name': 'colour'
-                })
-            }}
-
-            {{
-                form.date({
-                    'label': 'date',
-                    'id': 'date',
-                    'name': 'date'
-                })
-            }}
-
-            {{
-                form.file({
-                    'label': 'file',
-                    'id': 'file',
-                    'name': 'file'
-                })
-            }}
-
-            {{
-                form.password({
-                    'label': 'password',
-                    'id': 'password',
-                    'name': 'password'
                 })
             }}
         {{ form.repeatable_end() }}
