--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -306,7 +306,7 @@ fieldset {
     width: 100%;
 }
 
-@include respond-min($screen-smaller) {
+@include respond-min($screen-tablet) {
 
 // if no label is provided, the width of form__control will be calculated
 // based on the full 12 column grid
@@ -316,7 +316,7 @@ fieldset {
     .form__group .form__control,
     .form__group .form__control + .select2,
     .form__group--flush > .control__label + .controls > .form__control {
-        @include col-span(4, false, false, 12);
+        @include col-span-width(4, 12);
     }
 
     // column variations
@@ -324,7 +324,7 @@ fieldset {
         .form__control-col--#{$i} .form__control,
         .form__control-col--#{$i} .form__control + .select2,
         .form__group--flush.form__control-col--#{$i} .control__label + .controls > .form__control {
-            @include col-span($i, false, false, 12);
+            @include col-span-width($i, 12);
         }
     }
 
@@ -334,14 +334,14 @@ fieldset {
     // default width
     .control__label + .controls > .form__control:not(.checkbox),
     .control__label + .controls > .form__control:not(.checkbox) + .select2 {
-        @include col-span(4, false, false, 9);
+        @include col-span-width(4, 9);
     }
 
     // column variations
     @for $i from 1 through 9 {
         .form__control-col--#{$i} .control__label + .controls > .form__control,
         .form__control-col--#{$i} .control__label + .controls > .form__control + .select2 {
-            @include col-span($i, false, false, 9);
+            @include col-span-width($i, 9);
         }
     }
 
@@ -358,13 +358,13 @@ fieldset {
 
     // input-groups default
     .form__group .input-group {
-        @include col-span(4, false, false, 9);
+        @include col-span-width(4, 9);
     }
 
     // input-groups column variations
     @for $i from 1 through 9 {
         .form__group.form__control-col--#{$i} .input-group {
-            @include col-span($i, false, false, 9);
+            @include col-span-width($i, 9);
         }
     }
 
