--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -55,17 +55,17 @@
 
     {{
         form.password({
-            'append': html.button({'label': html.icon('eye'), 'id': 'password__toggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__icontoggle__btn', 'class': 'btn--naked', 'type': 'button' }),
             'append_type': 'button',
             'class': 'password__toggle',
-            'id': 'password__toggle',
+            'id': 'password__icontoggle',
             'label': 'Password field with Visibility Toggle (Icon)'
         })
     }}
 
     {{
         form.password({
-            'append': html.button({'label': 'SHOW', 'id': 'password__texttoggle__button', 'class': 'btn--naked password__toggle__button', 'type': 'button' }),
+            'append': html.button({'label': 'SHOW', 'id': 'password__texttoggle__btn', 'class': ' password__texttoggle__btn btn--naked', 'type': 'button' }),
             'append_type': 'button',
             'class': 'password__toggle',
             'id': 'password__texttoggle',
@@ -86,7 +86,7 @@
 
     {{
         form.password({
-            'append': html.button({'label': html.icon('eye'), 'id': 'password__metertoggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__metertoggle__btn', 'class': 'btn--naked', 'type': 'button' }),
             'append_type': 'button',
             'class': 'password__meter password__toggle',
             'id': 'password__metertoggle',
@@ -96,7 +96,7 @@
 
     {{
         form.password({
-            'append': html.button({'label': 'SHOW', 'id': 'password__metertoggle__button-2', 'class': 'btn--naked password__toggle__button', 'type': 'button' }),
+            'append': html.button({'label': 'SHOW', 'id': 'password__metertoggle__btn-2', 'class': 'password__texttoggle__btn btn--naked', 'type': 'button' }),
             'append_type': 'button',
             'class': 'password__meter password__toggle',
             'id': 'password__metertoggle-2',
