select2 and multi-select values now handled

--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -11,37 +11,178 @@
             'label': 'The Pulsar team',
             'empty': 'You have not added any team members',
             'headings': [
-
-                { name: 'select', label: 'select' }
+            { name: 'text', label: 'text' },
+            { name: 'checkbox', label: 'checkbox' },
+            { name: 'choice', label: 'choice' },
+            { name: 'colour', label: 'colour' },
+            { name: 'date', label: 'date' },
+            { name: 'file', label: 'file' },
+            { name: 'password', label: 'password' },
+            { name: 'radio', label: 'radio' },
+            { name: 'radio_simple', label: 'radio_simple' },
+            { name: 'range', label: 'range' },
+            { name: 'select', label: 'select' },
+                { name: 'select2', label: 'select2' },
+                { name: 'select2multi', label: 'select2multi' }
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
             'add-another-group-text': 'Add another'
         }) }}
 
+    {{
+    form.fieldset_start({
+        'legend': 'Team Member'
+    })
+    }}
 
+    {{
+    form.text({
+        'label': 'text',
+        'id': 'text',
+        'name': 'text'
+    })
+    }}
 
-            {{
-                form.select({
-                    'label': 'select',
-                    'id': 'select',
-                    'name': 'select',
-                    'options': [
-                    {
-                        'label': 'Choose',
-                        'value': ''
-                    },
-                    {
-                        'label': 'Red',
-                        'value': 'colour_red'
-                    },
-                    {
-                        'label': 'Blue',
-                        'value': 'colour_blue'
-                    }
-                    ]
-                })
-            }}
+    {{
+    form.checkbox({
+        'label': 'checkbox',
+        'id': 'checkbox',
+        'name': 'checkbox'
+    })
+    }}
+
+    {{
+    form.choice({
+        'label': 'choice',
+        'id': 'choice',
+        'options': [
+        {
+            'label': 'foo',
+            'value': 'foo',
+            'name': 'choice'
+        },
+        {
+            'label': 'bar',
+            'value': 'bar',
+            'name': 'choice'
+        },
+        {
+            'label': 'baz',
+            'value': 'baz',
+            'name': 'choice'
+        }
+        ]
+    })
+    }}
+
+    {{
+    form.color({
+        'label': 'colour',
+        'id': 'colour',
+        'value': '123456',
+        'name': 'colour'
+    })
+    }}
+
+    {{
+    form.date({
+        'label': 'date',
+        'id': 'date',
+        'name': 'date'
+    })
+    }}
+
+    {{
+    form.file({
+        'label': 'file',
+        'id': 'file',
+        'name': 'file'
+    })
+    }}
+
+    {{
+    form.password({
+        'label': 'password',
+        'id': 'password',
+        'name': 'password'
+    })
+    }}
+
+    {{
+    form.radio({
+        'label': 'radio',
+        'id': 'radio',
+        'name': 'radio',
+        'value': 'radio'
+    })
+    }}
+
+    {{
+    form.radio_simple({
+        'label': 'radio_simple',
+        'id': 'radio_simple',
+        'name': 'radio_simple',
+        'value': 'radio_simple'
+    })
+    }}
+
+    {{
+    form.range({
+        'label': 'range',
+        'id': 'range',
+        'name': 'range'
+    })
+    }}
+
+    {{
+        form.select({
+            'label': 'select',
+            'id': 'select',
+            'name': 'select',
+            options: [
+        {
+            'label': 'Choose',
+            'value': ''
+        },
+        {
+            'label': 'Red',
+            'value': 'colour_red'
+        },
+        {
+            'label': 'Blue',
+            'value': 'colour_blue'
+        }
+        ]
+    })
+    }}
+
+        {{
+            form.select2({
+                'label': 'select2',
+                'id': 'select2',
+                'name': 'select2',
+                'options': {
+                    '': 'Choose',
+                    'colour_red': 'Red',
+                    'colour_blue': 'Blue'
+                }
+            })
+        }}
+
+        {{
+            form.select2({
+                'label': 'select2multi',
+                'id': 'select2multi',
+                'name': 'select2multi',
+                'multiple': true,
+                'options': {
+                    'colour_red': 'Red',
+                    'colour_blue': 'Blue'
+                }
+            })
+        }}
+
         {{ form.repeatable_end() }}
 
         <input type="submit"/>
