--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2121,9 +2121,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
         data-repeater-max-entries="{{ options['max-entries']|default(false) }}"
         data-repeater-preview-colspan="{{ options.headings|length + 1 }}"
     >
-        <pre>DEBUG SAVED DATA</pre>
-        <div class="repeater__saved-data" data-repeater-saved-entries-root></div>
-        <pre>================</pre>
+        <div class="repeater__saved-data" style="display: none;" data-repeater-saved-entries-root></div>
         <div class="form__group">
             {{
                 elem.label({
