--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -9,6 +9,8 @@
 
 .password__colorbar {
   background-image: url($image-path + 'passwordstrength.jpg');
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   height: 3px;
   left: 0;
   position: absolute;
