Remove Excess Whitespace below Password Input
This happened when the password criteria where presented underneath the password input.

--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -43,6 +43,7 @@
 .password__wrapper.form__control {
     background-color: transparent !important;
     display: inherit;
+    height: inherit;
     padding: 0 !important;
 }
 
