--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2192,5 +2192,6 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                 }}
             </div>
         </div>
+    </div>
 {% endspaceless %}
 {% endmacro %}
