--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -117,6 +117,14 @@
             height: 24px;
             width: 24px;
         }
+
+        a > i {
+            color: color(text);
+        }
+
+        a:hover > i {
+            color: #2d86b3;
+        }
     }
 }
 
