a few repeater UI tweaks

--- a/stylesheets/_component.repeater.scss
+++ b/stylesheets/_component.repeater.scss
@@ -1,3 +1,8 @@
 .repeater__group {
     display: none;
 }
+
+.repeater__group-actions {
+	margin-top: $line-height-base;
+	padding: $line-height-base 0 0;
+}
