--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2198,7 +2198,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
             }}
             <div class="controls">
                 <div class="table-container">
-                    <table class="table table--full repeatable__table">
+                    <table class="table table--full table--horizontal repeatable__table">
                         <thead class="repeater__preview-headings">
                             <tr>
                                 {% for heading in options.headings %}
