--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -500,7 +500,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 
 # Compound
 
-Allows you to build a form group using multiple separate inputs with a single 
+Allows you to build a form group using multiple separate inputs with a single
 common label, and render those in a screenreader-friendly way.
 
 https://jadu.github.io/pulsar/form-helpers/compound
@@ -2200,7 +2200,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
             }}
             <div class="controls">
                 <div class="table-container"> <!-- remove this if is DT as DT adds it! -->
-                    <table class="table table--full repeatable__table" data-datatable data-datatable-responsive> <!-- conditionally add the DT stuff -->
+                    <table class="table table--full repeatable__table" data-repeater-table data-datatable data-datatable-responsive> <!-- conditionally add the DT stuff -->
                         <thead class="repeater__preview-headings">
                             <tr>
                                 {% for heading in options.headings %}
